--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Create User
   mongodb_user:
-    name:           "{{ new_mongodb_user}}"
-    password:       "{{ new_mongodb_pass }}"
-    login_user:     "{{ mongodb_admin }}"
-    login_password: "{{ mongodb_pass }}"
+    name:           "{{ new_db_user}}"
+    password:       "{{ new_db_pass }}"
+    login_user:     "{{ db_admin }}"
+    login_password: "{{ db_pass }}"
     database:       "{{ db_name | default('admin') }}"
     state:          present
     roles:          "{{ 'root,backup,restore' if db_name|default('admin') == 'admin' else 'dbOwner' }}"
