--- a/travis-playbook.yml
+++ b/travis-playbook.yml
@@ -4,8 +4,8 @@
   become: yes
 
   vars:
-    new_mongodb_user: test_user
-    new_mongodb_pass: password
+    new_db_user: test_user
+    new_db_pass: password
 
   roles:
     - bbatsche.MongoDB-Install
