Move MongoDB-Install to the provision step (better isolation from potential errors in other module)

--- a/travis-playbook.yml
+++ b/travis-playbook.yml
@@ -1,11 +1,12 @@
 ---
 - hosts: all
 
+  vars_files:
+    - defaults/main.yml
+
   vars:
     new_db_user: test_user
     new_db_pass: password
 
-  roles:
-    - bbatsche.MongoDB-Install
   tasks:
     - include: tasks/main.yml
