--- a/spec/playbooks/mongodb-manage.yml
+++ b/spec/playbooks/mongodb-manage.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: all
-  roles:
-    - bbatsche.MongoDB-Install
+
+  vars_files:
+    - ../../defaults/main.yml
+
   tasks:
     - include: ../../tasks/main.yml
