--- a/travis-playbook.yml
+++ b/travis-playbook.yml
@@ -8,5 +8,8 @@
     new_db_user: test_user
     new_db_pass: password
 
+  roles:
+    - bbatsche.MongoDB-Install
+
   tasks:
     - include: tasks/main.yml
